# Learnit-Server

./: .env  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
account/: models.py  serializers.py
account/template/email/: activate.html  confirmation.html  password_reset.html
core/: constant.py  settings.py  signal.py  storages.py  urls.py
course/: models.py  search.py  serializer.py  views.py
course/migrations/: 0004_alter_course_level.py
course/template/email/: instructor_request.html
order/: apps.py  models.py  serializer.py  signals.py  urls.py  views.py
quiz/: admin.py  models.py  serializers.py  views.py
quiz/migrations/: 0001_initial.py
src/: db.sqlite3  requirements.txt
src/account/: admin.py  email.py  forms.py  services.py  urls.py  views.py
src/account/migrations/: 0001_initial.py
src/account/tests/: login.py
src/config/: entrypoint.sh  migrate.sh
src/core/: permissions.py  settings.py  urls.py  utils.py
src/course/: admin.py  email.py  tests.py  urls.py
src/course/migrations/: 0001_initial.py  0002_remove_category_image.py  0003_alter_course_detail.py  0005_settings.py  0006_alter_settings_bannerimg_alter_settings_errorimg_and_more.py
src/order/: admin.py
src/order/migrations/: 0001_initial.py
src/quiz/: urls.py
